Update header subheadline in _index.md

--- a/themes/hugo-scroll/assets/css/variables.scss
+++ b/themes/hugo-scroll/assets/css/variables.scss
@@ -39,7 +39,7 @@
     --single-page-bg-color: var(--section-light-bg-color);
 
     /* === Footer === */
-    --footer-color-background: #ffffff;
+    --footer-color-background: #d3d3d3;
     --footer-color: #22343a;
 
     /* === Lists === */
