Update footer colors in _index.scss and variables.scss

--- a/themes/hugo-scroll/assets/css/variables.scss
+++ b/themes/hugo-scroll/assets/css/variables.scss
@@ -39,8 +39,8 @@
     --single-page-bg-color: var(--section-light-bg-color);
 
     /* === Footer === */
-    --footer-color-background: #d3d3d3;
-    --footer-color: #22343a;
+    --footer-color-background: #002D72;
+    --footer-color: white;
 
     /* === Lists === */
     /* define list element for unnumbered lists, leave empty for default list element */
