--- a/themes/hugo-scroll/assets/css/content.scss
+++ b/themes/hugo-scroll/assets/css/content.scss
@@ -265,20 +265,13 @@ table {
         }
     }
 
-    /**tbody>tr:nth-child(even) {
+    tbody>tr:nth-child(even) {
         background-color: #fff5;
         background-blend-mode: lighten;
     }
 
     &.plain tbody>tr:nth-child(odd)>td,
     &.plain tbody>tr:nth-child(odd)>th {
-        background: transparent;
-    }**/
-
-    &.plain tbody>tr:nth-child(odd)>td,
-    &.plain tbody>tr:nth-child(odd)>th,
-    &.plain tbody>tr:nth-child(even)>td,
-    &.plain tbody>tr:nth-child(even)>th {
         background: transparent;
     }
 
